fix ( clipped images will no longer move the clipped shape )

--- a/app/components/common/interactive-viewer/interactive-viewer.scss
+++ b/app/components/common/interactive-viewer/interactive-viewer.scss
@@ -3,10 +3,26 @@
 @import "../../../styles/variables/fonts.scss";
 
 .interactive-viewer-container {
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  font-family: $primary-font;
+
+  .interactive-viewer {
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    font-family: $primary-font;
+
+    .interactive-panel {
+      .viewer-content {
+        -webkit-transition: -webkit-transform 0.5s;
+        transition: transform 0.5s;
+        @include prevent-user-select;
+
+        img {
+          pointer-events: none;
+        }
+      }
+
+    }
+  }
 
   &:hover {
     .action {
@@ -21,8 +37,7 @@
     text-align: center;
     position: absolute;
     z-index: 9999;
-    visibility: hidden;
-
+    // visibility: hidden;
 
     &:focus {
       outline: 0;
@@ -36,7 +51,8 @@
 
       .icon {
         position: relative;
-        top: -17px;
+        top: -21px;
+        left: -2px;
         font-size: 3em;
       }
     }
@@ -49,7 +65,8 @@
 
       .icon {
         position: relative;
-        top: -10px;
+        top: -14px;
+        left: -2px;
         font-size: 2em;
       }
     }
@@ -83,26 +100,6 @@
     &.snapshot {
       left: 20px;
       bottom: 20px;
-    }
-  }
-
-
-
-  .interactive-panel {
-    .viewer-content {
-      -webkit-transition: -webkit-transform 0.5s;
-      transition: transform 0.5s;
-      @include prevent-user-select;
-
-      img {
-        pointer-events: none;
-      }
-    }
-
-    &:hover {
-      .icons {
-        visibility: visible;
-      }
     }
   }
 }
